--- a/app/app.css
+++ b/app/app.css
@@ -5,6 +5,7 @@
   border-bottom: 0.1em solid black;
   margin-bottom: 2em;
   padding: 0 0 0.5em;
+  
 }
 
 .menu:before {
@@ -23,3 +24,16 @@
   content: "|";
   padding-right: 0.3em;
 }
+
+.ng-binding.water {
+  color: blue;
+}
+
+.ng-binding.fire {
+  color: red;
+}
+
+.ng-binding.grass {
+  color: green;
+}
+
